sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:11: error: type mismatch;
 found   : Unit
 required: Boolean
		if (x=0){
                     ^